# DislScatHexFITThreading

./: .gitignore  CMakeLists.txt  README.md  default.cfg
src/: CalculatorBase.cpp  CalculatorBase.h  CalculatorDCRYST.cpp  CalculatorDCRYST.h  CalculatorTCRYST.cpp  CalculatorTCRYST.h  Engine.cpp  Engine.h  LevmarFitter.cpp  LevmarFitter.h  NonlinearFit.cpp  ProgramSettings.cpp  ProgramSettings.h  UsefulStructures.h  main.cpp
